Fixing Bower Versions, Fix Flickering

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,23 +1,9 @@
-body {
-    padding-top:50px;
+.content {
+	margin-top: 50px;
 }
-
 a.undecorated-link:hover {
 	text-decoration: none;
 }
-
-footer {
-    position:fixed;
-    left:0px;
-    bottom:0px;
-    height:30px;
-    width:100%;
-    background:#ddd;
-    -webkit-box-shadow:0 8px 6px 6px black;
-    -moz-box-shadow:0 8px 6px 6px black;
-    box-shadow:0 8px 6px 6px black
-}
-
-footer p {
-    padding:5px 0 12px 10px
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+	display: none !important;
 }
